src/test/testData/inspections/unresolvedSymbolInspection/highlightNotImported.lama
-- Some comment

import List;

<error descr="Symbol 'emptyBuffer' is unresolved">emptyBuffer</error>()